--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,7 +11,10 @@
     <h1>Login</h1>
     <form id="loginForm">
       <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
+      <div class="password-container">
+        <input type="password" name="password" id="loginPassword" placeholder="Password" required>
+        <button type="button" id="toggleLoginPassword" class="password-toggle">👁</button>
+      </div>
       <button type="submit">Login</button>
     </form>
     <p style="text-align: center; margin-top: 20px;">
