--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -11,7 +11,10 @@
   <form id="signupForm">
     <input type="text" name="fullname" placeholder="Full Name" required><br>
     <input type="email" name="email" placeholder="Email" required><br>
-    <input type="password" name="password" placeholder="Password" required><br>
+    <div class="password-container">
+      <input type="password" name="password" id="signupPassword" placeholder="Password" required>
+      <button type="button" id="toggleSignupPassword" class="password-toggle">👁</button>
+    </div><br>
     <label for="role">Role</label>
     <select name="role" id="role" required title="Select your role">
       <option value="">Select Role</option>
